# KrakenChain

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/blockchain/: block.rs  blockchain.rs  merkle_tree.rs  mod.rs  transaction.rs
src/utils/: logger.rs  mod.rs
