[package]
name = "KrakenChain"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
uint = "0.9"
ring = "0.17.8"
untrusted = "0.9"
uuid = { version = "1.3", features = ["v4"] }
colored = "2.1.0"
num_cpus = "1.13.0"

[dev-dependencies]
rand = "0.8"